--- a/index.html
+++ b/index.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <title>krawtchouk</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-    <h3>A MatLab package to calculate three-dimensional Krawtchouk moment invariants</h3>
-    <a href="./algorithm.html">Algorithm</a>
+    
+    <div id="navigation">
+        <nav>
+            <ul class="navigation-list">
+                <li class="navigation-list-item-list" style="margin-bottom: 10px;"><a href="./index.html">Home</a></li></br>
+                <li class="navigation-list-item">Algorithm</li></br>
+                <li class="navigation-list-item-list"><a href="./krawtchouk.html">Krawtchouk Moments</a></li></br>
+                <li class="navigation-list-item-list"><a href="./classification.html">Classification</a></li></br>
+            </ul>
+        </nav>
+    </div>
+
+    <div id="content">
+        <h4>Introduction</h4>
+        <p> This is a MatLab library whose main function is generating the shape signature for the three-dimensional (3D) object.</p>
+        <p> The signature is implemented by the Krawtchouk moment invariants. 
+            The main advantage of this method is the invariants are independent on translation, scaling, and rotation, which makes it possible to describe objects consistently.
+        </p>
+        <h4>Download</h4>
+        <a href="">krawtchouk.zip</a> August 2023
+    </div>
+
 </body>
+
 </html>
