--- a/index.html
+++ b/index.html
@@ -7,27 +7,44 @@
 </head>
 <body>
     
-    <div id="navigation">
-        <nav>
-            <ul class="navigation-list">
-                <li class="navigation-list-item-list" style="margin-bottom: 10px;"><a href="./index.html">Home</a></li></br>
-                <li class="navigation-list-item">Algorithm</li></br>
-                <li class="navigation-list-item-list"><a href="./krawtchouk.html">Krawtchouk Moments</a></li></br>
-                <li class="navigation-list-item-list"><a href="./classification.html">Classification</a></li></br>
+    <div id="head">
+        <span style="color: #009879;"><b>KMI3D</b></span>
+        <span style="color: grey; font-size: 10px;">A MATLAB package to calculate 3D Krawtchouk moment invariants</span>
+    </div>
+    
+    <div id="navcon">
+        <div id="navigation">
+            <nav>
+                <ul class="navigation-list">
+                    <li class="navigation-list-item" style="margin-bottom: 10px;">Table of Content</li></br>
+                    <li class="navigation-list-item-list" style="margin-bottom: 10px;"><a href="./index.html">Home</a></li></br>
+                    <li class="navigation-list-item-list" style="margin-bottom: 10px;"><a href="./started.html">Getting Started</a></li></br>
+                    <li class="navigation-list-item-list" style="margin-bottom: 10px;"><a href="./krawtchouk.html">Krawtchouk Moments</a></li></br>
+                    <li class="navigation-list-item-list" style="margin-bottom: 10px;"><a href="./examples.html">Examples</a></li></br>
+                </ul>
+            </nav>
+        </div>
+
+        <div id="content">
+            <h4>Brief</h4>
+            <p> This is a MATLAB package that derives 3D Krawtchouk moment invariants. By inputting a 3D image, it can generate shape features of the object within the image.</p>
+            <h4>Key Features</h4>
+            <ul>
+                <li>Extract discriminative features from any region-of-interest.</li>
+                <li>The extracted features are translation, scaling, and rotation invariant.</li>
+                <li>The formulation is defined on a discrete space thus do not carry any error.</li>
+                <li>Short runtime required to extract low-order features.</li>
             </ul>
-        </nav>
+            <h4>Potential Applications</h4>
+            <ul>
+                <li>Research on the morphological evolution of species.</li>
+                <li>Prediction of ligand binding sites on protein surfaces.</li>
+            </ul>
+            <h4>Help</h4>
+            <p>If you come across any issues or have queries regarding the implementation, we encourage you to share them on our <a href="https://github.com/krawtchouk/Krawtchouk-Moment-Invariants/issues">GitHub</a> issue page. 
+                By doing so, you will help us refine the package and ensure a great experience for all users.</p>
+        </div>
     </div>
-
-    <div id="content">
-        <h4>Introduction</h4>
-        <p> This is a MatLab library whose main function is generating the shape signature for the three-dimensional (3D) object.</p>
-        <p> The signature is implemented by the Krawtchouk moment invariants. 
-            The main advantage of this method is the invariants are independent on translation, scaling, and rotation, which makes it possible to describe objects consistently.
-        </p>
-        <h4>Download</h4>
-        <a href="">krawtchouk.zip</a> August 2023
-    </div>
-
 </body>
 
 </html>
