--- a/krawtchouk.html
+++ b/krawtchouk.html
@@ -11,7 +11,7 @@
 <body>
 
     <div id="head">
-        <span style="color: #009879;"><b>KMI3D</b></span>
+        <span style="color: #009879;"><b>3DKMI</b></span>
         <span style="color: grey; font-size: 10px;">A MATLAB package to calculate 3D Krawtchouk moment invariants</span>
     </div>
 
