--- a/started.html
+++ b/started.html
@@ -30,8 +30,8 @@
             <p><a href="https://github.com/krawtchouk/Krawtchouk-Moment-Invariants/archive/refs/heads/main.zip">krawtchouk.zip</a> - August 2023</p>
             <p>Once the download is completed, copy the downloaded .zip file to your working directory and unzip it.</p>
             <h4>Input Arguments and Output</h4>
-            <p>The core files of our package include <span style="font-style: italic;">readImage.m</span> and <span style="font-style: italic;">run3DKMI.m</span>. 
-                The function <span style="font-style: italic;">run3DKMI</span> plays a crucial role in receiving user input and producing the final output. 
+            <p>The core files of our package include <span style="font-style: italic;">readImage.m</span> and <span style="font-style: italic;">get3DKMI.m</span>. 
+                The function <span style="font-style: italic;">get3DKMI</span> plays a crucial role in receiving user input and producing the final output. 
                 Therefore, understanding the formats of inputs and outputs is key to helping users achieve the desired outcomes effectively. </p>
             <table>
                 <tr>
