--- a/krawtchouk.html
+++ b/krawtchouk.html
@@ -39,7 +39,7 @@
             <p>where the weight function \(w(x;p,N) = \begin{pmatrix}N\\x\end{pmatrix}p^x(1-p)^{N-x}\) and the norm \(\rho(n;p,N)=(-1)^n(\frac{1-p}{p})^n\frac{n!}{(-N)_n}\).</p>
     
             <h4>3D Weighted Krawtchouk Moment Invariants</h4>
-            <p>Let \(f(x,y,z)\) be the function representing the 3D image (where \(x\), \(y\) and \(z\) are the pixel coordinates of the image and the output of \(f\) is the pixel intensity) with size \(N\times M\times L\) and \(V\) be the volume of the specimen inside the 3D image, we have</p>
+            <p>Let \(f(x,y,z)\) be the function representing the 3D image (where \(x\), \(y\) and \(z\) are the pixel coordinates of the image and the output of \(f\) is the pixel intensity) with size \(N\times M\times L\) and \(V\) be the volume of the object inside the 3D image, we have</p>
             <p>\[f(x,y,z) = \begin{cases}1, & \forall(x,y,z) \in V;\\0, & \text{otherwise}.\end{cases}\]</p>
             <p>The 3D weighted Krawtchouk moments of order \(n+m+l\) of \(f(x,y,z)\) can then be constructed from polynomials defined as</p>
             <p>\[\begin{aligned}
