--- a/started.html
+++ b/started.html
@@ -41,11 +41,11 @@
                 <tr>
                     <td>arr <span style="font-size: small; color: grey;">(Mandatory)</span></td>
                     <td>An array representing the 3D image. 
-                        The image should be binarized, i.e., the pixel intensity at any point on the object is 1, otherwise it is 0.
+                        The image should be binarized, i.e., the pixel intensity at any point on the object is 1, otherwise, it is 0.
                     </td>
                 </tr>
                 <tr>
-                    <td>S <span style="font-size: small; color: grey;">(Mandatory)</span></td>
+                    <td>dim <span style="font-size: small; color: grey;">(Mandatory)</span></td>
                     <td>An intended size of the image. 
                         To maintain the spherical coverage shape of the weight function when extracting the local features, we require the 3D image to be a cube. 
                         It is important to use a consistent size when comparing the features extracted from different 3D images.
@@ -62,7 +62,7 @@
                 <tr>
                     <td>POI <span style="font-size: small; color: grey;">(Optional)</span></td>
                     <td>"POI" stands for "point-of-interest", denoting a 1x3 array that specifies the coordinates of the point of interest within the image. 
-                        If the user specify a POI as input, then the localized features around the POI will be extracted, whereas the absence of this input results in the extraction of features from the image as a whole.</br>
+                        If the user specifies a POI as input, then the localized features around the POI will be extracted, whereas the absence of this input results in the extraction of features from the image as a whole.</br>
                         <span style="font-size: small; color: grey;">Default value: []</span>
                     </td>
                 </tr>
