--- a/examples.html
+++ b/examples.html
@@ -86,13 +86,13 @@ figure, patch(isosurface(arr, 0.1), 'Facecolor', color, 'FaceAlpha', 0.5, 'edgec
                 This outcome is actually acceptable, given that the distance between the original and transformed images is significantly smaller than this numerical difference.
             </p>
             <img src="modulation.png" alt="airplane and cup">
-            <p>The below image depicts the mean squared error (MSE) between the 3D Krawtchouk moment invariants of the original object and the ones under translation, scaling, and rotation.
-                The left and right columns show the mean squared error between the original object and the transformed ones regarding global features and local features, respectively. 
+            <p>The image below depicts the mean squared error (MSE) between the 3D Krawtchouk moment invariants of the original airplane and the ones under translation, scaling, and rotation.
+                The left and right columns show the mean squared error between the original airplane and the transformed ones regarding global features and local features, respectively. 
                 Three transformations are involved in total: 
                 (a)--(b) when the object is shifted (translation); 
                 (c)--(d) when the size of the object changes (scale); 
                 and (e)--(f) when the object rotates about the x-axis, y-axis, and z-axis (rotation). 
-                All transformed objects still fit the size of the original image.
+                All transformed airplanes still fit the size of the original image.
             </p>
             <img src="=invariance.png" alt="invariance performance">
         </div>
