--- a/examples.html
+++ b/examples.html
@@ -94,7 +94,7 @@ figure, patch(isosurface(arr, 0.1), 'Facecolor', color, 'FaceAlpha', 0.5, 'edgec
                 and (e)--(f) when the object rotates about the x-axis, y-axis, and z-axis (rotation). 
                 All transformed airplanes still fit the size of the original image.
             </p>
-            <img src="=invariance.png" alt="invariance performance">
+            <img src="invariance.png" alt="invariance performance">
         </div>
 
     </div>
